# TommyTalker

./: .env.example  .gitignore  .pre-commit-config.yaml  ANTIGRAVITY.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  ISSUES_BACKLOG.md  LICENSE  README.md  SECURITY.md  StartHere.md  TommyTalker.spec  app_controller.py  build.sh  findings.md  gemini.md  main.py  progress.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_dev.sh  task_plan.md
.agent/workflows/: gogogo.md  wrapup.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
SW/Contents/: CodeResources  Info.plist
SW/Contents/Resources/: AppIcon.icns  bundled_app_info.json  llama3.jinja  noResult3.m4a  noResult4.m4a
SW/Contents/_CodeSignature/: CodeResources
_project/: DevPlan.md
engine/: __init__.py  audio_capture.py  diarizer.py  llm_client.py  modes.py  session_db.py
gui/: __init__.py  dashboard.py  menu_bar.py  onboarding.py  setup_guide.py
resources/: com.tommytalker.app.plist
scripts/: generate_icon.py  security_scan.sh
src/tommy_talker/: __init__.py  app_controller.py  main.py
src/tommy_talker/data/: app_profiles.json
src/tommy_talker/engine/: __init__.py  audio_capture.py  llm_client.py  modes.py  rag_store.py  session_db.py  transcriber.py
src/tommy_talker/gui/: __init__.py  dashboard.py  hotkey_selector.py  hud.py  menu_bar.py  onboarding.py  setup_guide.py
src/tommy_talker/utils/: __init__.py  app_context.py  audio_feedback.py  code_validator.py  config.py  hardware_detect.py  history.py  logger.py  (+6 more)
tests/: __init__.py  conftest.py  test_app_aware_llm.py  test_app_context.py  test_audio_feedback.py  test_example.py  test_modifier_hotkey.py  test_session_recorder.py  test_tdd_example.py
utils/: __init__.py  audio_feedback.py  config.py  history.py  hotkeys.py  logger.py  secure_credentials.py  typing.py
(+55 files in other folders)
