[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tommytalker"
version = "0.1.0"
description = "Privacy-first voice-to-text for macOS"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Tommy Neary"}
]
keywords = ["voice", "transcription", "macos", "privacy", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "PyQt6>=6.6.0",
    "pyobjc-framework-Cocoa>=10.0",
    "pyobjc-framework-Quartz>=10.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.0",
    "mlx-whisper>=0.1.0",
    "pyautogui>=0.9.54",
    "psutil>=5.9.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.2.0",
    "pytest-cov>=4.0.0",
    "mutmut>=3.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pyinstaller>=6.0.0",
]

[project.scripts]
tommytalker = "tommy_talker.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["tommy_talker*"]

[tool.setuptools.package-data]
tommy_talker = ["data/*.json"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
markers = [
    "tdd: marks tests written following Red-Green-Refactor TDD cycle",
]

[tool.mutmut]
paths_to_mutate = "src/tommy_talker/"
tests_dir = "tests/"
runner = "python -m pytest -x -q --tb=no"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
